<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:apps="http://schemas.android.com/tools"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            android:background="@color/colorPrimary"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_side_nav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="16dp"
                    android:src="@drawable/ic_arrow_back"/>

                <EditText
                    android:id="@+id/et_search_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:hint="@string/start_search"
                    android:textColorHint="@color/white"
                    android:maxLines="1"
                    android:layout_toEndOf="@id/iv_side_nav"
                    android:layout_toStartOf="@id/iv_search"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:background="@null"/>

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_white_search"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/hot_search"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_hot_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/history_search"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/tv_clear_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:text="@string/clear"/>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:overScrollMode="never"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
